# MICM_chemistry

./: CMakeLists.txt
src/: MICM_chemistry_schemes.txt  chemistry_driver_moz.F90  chemistry_driver_ros.F90  const_props_mod.F90  json_loader.F90  mass_quantities_util.F90
src/kinetics/: k_rateConst.F90  kinetics.F90  kinetics_module.F90  kinetics_params.F90  prepare_chemistry.F90
suites/: suite_micm.xml
